--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,18 @@
   "description": "Select links on a page and download them.",
   "version": "0.1",
   "minimum_chrome_version": "16.0.884",
-  "permissions": ["downloads", "https://piazza.com/*"],
-  "browser_action": {"default_popup": "popup.html"},
+  "permissions": ["https://piazza.com/*"],
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
   "manifest_version": 2,
-  "content_scripts": [ {
-   "js": [ "jquery.js", "send_links.js" ],
-   "matches": ["https://piazza.com/*"]
-  }]
+  "content_scripts": [
+    {
+      "js": ["jquery.js"],
+      "matches": ["https://piazza.com/*"]
+    }
+  ],
+  "background": {
+    "scripts": ["jquery.js", "background.js"]
+  }
 }
